<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_success">添加成功</string>
    <string name="add_task">添加任务</string>
    <string name="all">全部</string>
    <string name="all_tasks">全部任务</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">TaskManager</string>
    <string name="append">添加</string>
    <string name="can_not_write_to_file">无法写入数据到指定文件</string>
    <string name="cancel">取消</string>
    <string name="cancelled">已取消</string>
    <string name="close">关闭</string>
    <string name="creation_time">创建时间</string>
    <string name="custom">自定义</string>
    <string name="deadline">截止日期</string>
    <string name="deadline_format">截止日期: %s</string>
    <string name="deadline_date">截止日期</string>
    <string name="deadline_time">截止时间</string>
    <string name="detailed_information">详细信息</string>
    <string name="do_not_save">不保存</string>
    <string name="export_data">导出数据</string>
    <string name="foreground_service_of_check_deadline_service">截止任务检查服务前台服务</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="if_sure_to_delete">是否确认删除</string>
    <string name="import_data">导入数据</string>
    <string name="import_data_failed">导入数据失败</string>
    <string name="import_failed">导入失败</string>
    <string name="import_succeed">导入成功</string>
    <string name="incompatible_database">数据库不兼容</string>
    <string name="invalid_database_type">无效数据库格式</string>
    <string name="last_modified_time">更新时间</string>
    <string name="log">日志</string>
    <string name="notice_import_data">共发现%d条数据，请选择导入方式</string>
    <string name="notification_count_of_ending_task">%d个任务即将截止</string>
    <string name="notification_title_deadline">任务截止通知</string>
    <string name="ok">确定</string>
    <string name="open_editor_failed">编辑器打开失败</string>
    <string name="other">其他</string>
    <string name="override">覆盖</string>
    <string name="request_content_change">检测到内容更改，是否保存更改?</string>
    <string name="save">保存</string>
    <string name="save_data_failed">保存数据失败</string>
    <string name="save_failed">保存失败</string>
    <string name="setting">设置</string>
    <string name="task_will_end_in_minutes">%s将在%d分钟后截止</string>
    <string name="title">标题</string>
    <string name="unfinished">未完成</string>
    <string name="unfinished_tasks">未完成任务</string>
    <string name="untitled_task">无标题任务</string>
    <string name="upcoming_task_notification">任务即将截止通知</string>
    <string name="warn_of_upcoming_tasks">任务截止提醒</string>
    <string name="welcome">欢迎</string>
    <string name="whether_cancel_check_finished">是否确定取消已完成</string>
    <string name="whether_check_finished">是否确定已完成</string>
    <string name="create_new_task">创建任务</string>
    <string name="filter">筛选</string>
    <string name="hide_expired_task">隐藏截止任务</string>
    <string name="shown_expired_task">显示截止任务</string>
    <string name="home">主页</string>
    <string name="task_list">任务列表</string>
    <string name="search_task">搜索任务</string>
    <string name="edit_task">编辑任务</string>
    <string name="creation_date">创建日期</string>
    <string name="last_modified_date">更新日期</string>
    <string name="reverse_sort">倒序</string>
    <string name="sort">排序</string>
    <string name="hide_finished_task">隐藏已完成任务</string>
    <string name="notification_setting">通知设置</string>
    <string name="user_data_manage">用户数据管理</string>
    <string name="deadline_expired">已截止</string>
    <string name="deadline_less_than_one_minute">小于1分钟</string>
    <string name="deadline_remaining_minutes">剩余%1$d分钟</string>
    <string name="deadline_remaining_hours">剩余%1$d小时</string>
    <string name="deadline_remaining_days">剩余%1$d天</string>
    <string name="create_date">创建日期</string>
</resources>
