<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_background_1"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textview_deadline_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/deadline_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.hnidesu.taskmanager.widget.view.DateEditView
        android:id="@+id/edittext_deadline_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_background_1"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textview_deadline_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/deadline_time"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.hnidesu.taskmanager.widget.view.TimeEditView
        android:id="@+id/edittext_deadline_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_background_1"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:textSize="18sp" />
</LinearLayout>
